Prevent things from overflowing out the top

--- a/AbyxBot/server/static/main.css
+++ b/AbyxBot/server/static/main.css
@@ -28,7 +28,7 @@ h1 {
 }
 /* center and fill height */
 .center.fill {
-	height: 100vh;
+	min-height: 100vh;
 }
 
 /* spread elements horizontally */
